tests/machine/x/c/group_by_multi_join_sort.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_multi_join_sort.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_multi_join_sort.c:146:28: error: invalid initializer
  146 |   list_ResultItem result = 0;
      |                            ^

   1: #include <stdio.h>
